--- a/app/views/admins/estates/index.html.erb
+++ b/app/views/admins/estates/index.html.erb
@@ -35,6 +35,7 @@
 <div class="notice text-center pt-5 pb-5" style="font-size: 20px; font-weight: bold; color: #FA601A;">
   <%= flash[:new] %>
   <%= flash[:notice] %>
+  <%= flash[:destroy] %>
 </div>
 
 <div class="container" style="margin-bottom: 20px;">
