--- a/app/views/customers/favorites/_index.html.erb
+++ b/app/views/customers/favorites/_index.html.erb
@@ -36,6 +36,6 @@
       </div>
     <% end %>
   <% else %>
-    <div class="text-center" style="padding: 30px 0 50px 0; font-size: 20px;">お気に入りされた物件はございません。</div>
+    <div class="text-center" style="font-size: 20px; font-weight: bold;">お気に入りされた物件はございません。</div>
   <% end %>
 </div>
