--- a/app/views/customers/estates/finish.html.erb
+++ b/app/views/customers/estates/finish.html.erb
@@ -1,10 +1,10 @@
 <%= render "customers/customers/header" %>
 
-<div class="container" style=" padding-top: 150px;">
-  <div class="row justify-content-center" style=" padding-top: 100px; font-weight: bold; font-size: 45px;">
+<div class="container" style="padding-top: 150px;">
+  <div class="row" style="justify-content: center; padding-top: 100px; font-weight: bold; font-size: 45px;">
     お問い合わせ
   </div>
-  <div class="row justify-content-center" style="font-weight: bold; font-size: 45px;">
+  <div class="row" style="justify-content: center; font-weight: bold; font-size: 45px;">
     ありがとうございました。
   </div>
 </div>
