--- a/app/views/admins/calendars/_new.html.erb
+++ b/app/views/admins/calendars/_new.html.erb
@@ -1,4 +1,4 @@
-<div class="edit btn-sm btn-outline-secondary text-center" style="margin: 0 auto; margin-bottom: 40px; width: 250px;" data-toggle="modal" data-target="#new-Modal">
+<div class="edit btn-sm btn-outline-secondary" style="text-align: center; margin: 0 auto; margin-bottom: 40px; width: 250px;" data-toggle="modal" data-target="#new-Modal">
   スケジュール登録
 </div>
 
@@ -7,9 +7,9 @@
     <div class="modal-content">
       <%= form_with model: calendar, url: admins_calendars_path, local: true do |f| %>
         <div class="container">
-          
+
           <%= render 'layouts/error_messages', model: calendar %>
-          
+
           <div class="row justify-content-center pt-3 pb-3">
             <%= f.text_field :title, :size=> "53", placeholder: "スケジュール名" %>
           </div>
@@ -26,7 +26,9 @@
       <% end %>
     </div>
   </div>
-  <div class="text-center">
-    <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;"><i class="far fa-times-circle"></i></button>
+  <div style="text-align: center;">
+    <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;">
+      <i class="far fa-times-circle"></i>
+    </button>
   </div>
 </div>
