--- a/app/views/admins/customers/_footer.html.erb
+++ b/app/views/admins/customers/_footer.html.erb
@@ -1,3 +1,3 @@
-<footer class="footer" style="height: 50px;background-color: #18003E;">
-  <div class="text-center pt-3" style="color: white;">Copyright</p>
+<footer style="height: 50px; background-color: #18003E;">
+  <div style="padding-top: 15px; text-align: center; color: white;">Copyright</p>
 </footer>
