--- a/app/views/admins/customers/_header.html.erb
+++ b/app/views/admins/customers/_header.html.erb
@@ -1,10 +1,10 @@
 <header class="sticky-top shadow-sm" style="width: 100%;">
   <nav class="navbar navbar-expand-xs navbar-light">
     <a class="navbar-brand p-0" href="/admins/estates"><%= image_tag('logo1.jpg') %></a>
-    
+
     <% if researches.present? %>
-      <div class="researches text-left" style="font-size: 20px; font-weight: bold;">
-        <%= link_to "未対応のお問い合わせが#{researches.count}件ございます。", admins_researches_path %>
+      <div style="text-align: left; font-size: 20px; font-weight: bold;">
+        <%= link_to "未対応のお問い合わせが #{researches.count} 件あります！！！", admins_researches_path %>
       </div>
     <% end %>
 
