--- a/app/views/admins/estates/new.html.erb
+++ b/app/views/admins/estates/new.html.erb
@@ -1,6 +1,6 @@
 <%= render "admins/customers/header", researches: @researches %>
 
-<div class="text-center" style="padding: 130px 0 50px 0; font-size: 30px; font-weight: bold;">物件入稿画面</div>
+<div style="text-align: center; padding: 130px 0 50px 0; font-size: 30px; font-weight: bold;">物件入稿画面</div>
 
 <%= render 'layouts/error_messages', model: @estate %>
 
@@ -10,7 +10,7 @@
       <div class="row pt-4 pb-4">
         <div class="col-2 text-center"><%= f.label :物件名 %></div>
         <div class="col-5"><%= f.text_field :name, placeholder:"techroom", :size=>"50" %></div>
-        <div class="col-2 text-center pt-1"><%= f.label :部屋番号 %></div>
+        <div class="col-2 pt-1 text-center"><%= f.label :部屋番号 %></div>
         <div class="col-1"><%= f.number_field :room_number.to_s, placeholder:"304 (半角数字)" %></div>
       </div>
       <div class="row pb-4">
@@ -20,7 +20,7 @@
       <div class="row pb-4">
         <div class="col-2 text-center"><%= f.label :賃料 %></div>
         <div class="col-2"><%= f.number_field :price, value: "0000" %></div>
-        <div class="col-2 text-center pt-1"><%= f.label :間取り %></div>
+        <div class="col-2 pt-1 text-center"><%= f.label :間取り %></div>
         <div class="col-2"><%= f.text_field :floor, placeholder: "2LDK(半角数字)" %></div>
       </div>
       <div class="row pb-4">
@@ -39,15 +39,15 @@
           :size=>"102x10" %>
         </div>
       </div>
-      <div class="row pb-4 text-left" style="margin-right: 1px;">
-        <div class="col text-center pt-5">
+      <div class="row pb-4" style="margin-right: 20px;">
+        <div class="col pt-5 text-center">
           <%= f.label :背景画像 %>
           <%= f.attachment_field :background_image %>
         </div>
         <div>
           <%= attachment_image_tag @estate, :background_image, format: 'jpeg', size: "150x150" %>
         </div>
-        <div class="col text-center pt-5">
+        <div class="col pt-5 text-center">
           <%= f.label :間取り図画像 %>
           <%= f.attachment_field :floor_image %>
         </div>
@@ -55,15 +55,15 @@
           <%= attachment_image_tag @estate, :floor_image, format: 'jpeg', size: "150x150" %>
         </div>
       </div>
-      <div class="row pb-4 text-left" style="margin-right: 1px;">
-        <div class="col text-center pt-5">
+      <div class="row pb-4" style="margin-right: 20px;">
+        <div class="col pt-5 text-center">
           <%= f.label :物件画像１ %>
           <%= f.attachment_field :property_image_a %>
         </div>
         <div>
           <%= attachment_image_tag @estate, :property_image_a, format: 'jpeg', size: "150x150" %>
         </div>
-        <div class="col text-center pt-5">
+        <div class="col pt-5 text-center">
           <%= f.label :物件画像２ %>
           <%= f.attachment_field :property_image_b %>
         </div>
@@ -71,15 +71,15 @@
           <%= attachment_image_tag @estate, :property_image_b, format: 'jpeg', size: "150x150" %>
         </div>
       </div>
-      <div class="row pb-4 text-left" style="margin-right: 1px;">
-        <div class="col text-center pt-5">
+      <div class="row pb-4" style="margin-right: 20px;">
+        <div class="col pt-5 text-center">
           <%= f.label :物件画像３ %>
           <%= f.attachment_field :property_image_c %>
         </div>
         <div>
           <%= attachment_image_tag @estate, :property_image_c, format: 'jpeg', size: "150x150" %>
         </div>
-        <div class="col text-center pt-5">
+        <div class="col pt-5 text-center">
           <%= f.label :物件画像４ %>
           <%= f.attachment_field :property_image_d %>
         </div>
@@ -87,7 +87,7 @@
           <%= attachment_image_tag @estate, :property_image_d, format: 'jpeg', size: "150x150" %>
         </div>
       </div>
-      <div class="row pb-4 text-left" style="margin-right: 1px;">
+      <div class="row pb-4" style="margin-right: 20px;">
         <div class="col text-center pt-5">
           <%= f.label :物件画像５ %>
           <%= f.attachment_field :property_image_e %>
@@ -95,7 +95,7 @@
         <div>
           <%= attachment_image_tag @estate, :property_image_e, format: 'jpeg', size: "150x150" %>
         </div>
-        <div class="col text-center pt-5">
+        <div class="col pt-5 text-center">
           <%= f.label :物件画像６ %>
           <%= f.attachment_field :property_image_f %>
         </div>
@@ -103,15 +103,15 @@
           <%= attachment_image_tag @estate, :property_image_f, format: 'jpeg', size: "150x150" %>
         </div>
       </div>
-      <div class="row pb-4 text-left" style="margin-right: 1px;">
-        <div class="col text-center pt-5">
+      <div class="row pb-4" style="margin-right: 20px;">
+        <div class="col pt-5 text-center">
           <%= f.label :物件画像７ %>
           <%= f.attachment_field :property_image_g %>
         </div>
         <div>
           <%= attachment_image_tag @estate, :property_image_g, format: 'jpeg', size: "150x150" %>
         </div>
-        <div class="col text-center pt-5">
+        <div class="col pt-5 text-center">
           <%= f.label :物件画像８ %>
           <%= f.attachment_field :property_image_h %>
         </div>
@@ -119,15 +119,15 @@
           <%= attachment_image_tag @estate, :property_image_h, format: 'jpeg', size: "150x150" %>
         </div>
       </div>
-      <div class="row pb-4 text-left" style="margin-right: 1px;">
-        <div class="col text-center pt-5">
+      <div class="row pb-4" style="margin-right: 20px;">
+        <div class="col pt-5 text-center">
           <%= f.label :物件画像９ %>
           <%= f.attachment_field :property_image_i %>
         </div>
         <div>
           <%= attachment_image_tag @estate, :property_image_i, format: 'jpeg', size: "150x150" %>
         </div>
-        <div class="col text-center pt-5">
+        <div class="col pt-5 text-center">
           <%= f.label :物件画像１０ %>
           <%= f.attachment_field :property_image_j %>
         </div>
@@ -135,15 +135,15 @@
           <%= attachment_image_tag @estate, :property_image_j, format: 'jpeg', size: "150x150" %>
         </div>
       </div>
-      <div class="row pb-4 text-left" style="margin-right: 1px;">
-        <div class="col text-center pt-5">
+      <div class="row pb-4" style="margin-right: 20px;">
+        <div class="col pt-5 text-center">
           <%= f.label :物件画像１１ %>
           <%= f.attachment_field :property_image_k %>
         </div>
         <div>
           <%= attachment_image_tag @estate, :property_image_k, format: 'jpeg', size: "150x150" %>
         </div>
-        <div class="col text-center pt-5">
+        <div class="col pt-5 text-center">
           <%= f.label :物件画像１２ %>
           <%= f.attachment_field :property_image_l %>
         </div>
