--- a/app/views/customers/customers/unsubscribe.html.erb
+++ b/app/views/customers/customers/unsubscribe.html.erb
@@ -1,9 +1,9 @@
 <%= render "customers/customers/header" %>
 
-<div class="text-center" style="padding: 130px 0 30px 0; font-size: 30px; font-weight: bold;">退会画面</div>
+<div style="text-align: center; padding: 130px 0 30px 0; font-size: 30px; font-weight: bold;">退会画面</div>
 <div class="container">
   <div class="row pt-4">
-    <div class="col text-center" style=" font-size: 30px">
+    <div class="col" style="text-align: center; font-size: 30px">
       <p>退会処理を行う場合、『退会する』ボタンを押して下さい。<br>
       退会処理後はお気に入り物件の閲覧、お問い合わせができなくなります。<br>
       ※退会後に処理を取り消すことはできません。</p>
