--- a/app/views/customers/estates/_slide.html.erb
+++ b/app/views/customers/estates/_slide.html.erb
@@ -1,7 +1,5 @@
-<div class="row justify-content-center p-5" style="color: white; font-weight: bold;">
-  <div class="text" style="font-size: 60px;">
-    <div class>N e w</div>
-  </div>
+<div class="row" style="padding: 50px; justify-content: center; color: white; font-weight: bold; font-size: 60px;">
+  N e w
 </div>
 <div class="container">
   <% if estates.present? %>
@@ -25,7 +23,7 @@
                     <div>
                       賃料：¥<%= estate.price.to_s(:delimited) %>　間取り：<%= estate.floor %>
                     </div><br>
-                    <div class="favorite" style="font-size: 22px;">
+                    <div style="font-size: 22px;">
                       <i class="fas fa-building"></i><%= estate.favorites.count %>
                     </div>
                   </div>
@@ -55,7 +53,7 @@
                     <div>
                       賃料：¥<%= estate.price.to_s(:delimited) %>　間取り：<%= estate.floor %>
                     </div><br>
-                    <div class="favorite" style="font-size: 22px;">
+                    <div style="font-size: 22px;">
                       <i class="fas fa-building"></i><%= estate.favorites.count %>
                     </div>
                   </div>
@@ -78,6 +76,8 @@
       </div>
     </div>
 　<% else %>
-  　<div class="text-center pt-5">現在、物件情報はございません。<br>新着物件が出るまでもう少々お待ちください。</div>
+    <div style="padding-top: 50px; text-align: center; font-size: 20px; font-weight: bold;">
+      現在、物件情報はございません。<br>新着物件が出るまでもう少々お待ちください。
+    </div>
 　<% end %>
 </div>
