--- a/app/views/customers/estates/top.html.erb
+++ b/app/views/customers/estates/top.html.erb
@@ -47,13 +47,13 @@
   <%= link_to image_tag("logo1.jpg"), root_path, class: "image-top" %>
 </div>
 
-<div class="text-center pt-5" style="font-size: 20px; font-weight: bold; color: #FA601A;">
+<div style="padding-top: 50px; text-align: center; font-size: 20px; font-weight: bold; color: #FA601A;">
   <%= flash[:notice] %>
 </div>
 
 <%= search_form_for @q do |f| %>
   <div class="d-flex justify-content-center" style="padding-top: 50px; font-size: 21px;">
-    <div class="search_field" style="padding-bottom: 10px;">
+    <div style="padding-bottom: 10px;">
       <%= f.select :address_start,
       [["東京都千代田区"],
       ["東京都中央区"],
@@ -95,16 +95,16 @@
       ["430000"],["440000"],["450000"],["460000"],["470000"],["480000"],["490000"],["500000"],["1000000"]], {include_blank: "賃料(上限)"} %>
     </div>
   </div>
-  <div class="search_field d-flex" style="justify-content: center; padding-top: 5px; font-size: 18px;">
+  <div style="text-align: center; padding-top: 5px; font-size: 18px;">
     <%= f.search_field :keyword, value: @keywords,
     :placeholder => "フリーワード　(検索例)浴室乾燥機　オートロック", style: "outline-offset: 0; border-width: thin; height: 22px; border-radius: 2px; padding-right: 5px;", :size => "58" %>
   </div>
-  <div class="d-flex justify-content-center" style="padding-top: 50px;">
+  <div style="text-align: center; padding-top: 50px;">
     <%= f.submit "検索", class: "search" %>
   </div>
 <% end %>
 
-<div class="new" style="margin-top: 100px; padding-bottom: 100px; background-color: #EB9FEF;">
+<div style="margin-top: 100px; padding-bottom: 100px; background-color: #EB9FEF;">
   <%= render "slide", estates: @estates %>
   <%= render "ranks", all_ranks: @all_ranks %>
 </div>
