--- a/app/views/customers/registrations/edit.html.erb
+++ b/app/views/customers/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <%= render "customers/customers/header" %>
 
-<div class="text-center" style="padding: 150px 0 30px 0; font-size: 30px; font-weight: bold;">マイページ編集</div>
+<div style="text-align: center; padding: 150px 0 30px 0; font-size: 30px; font-weight: bold;">プロフィール編集</div>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "customers/shared/error_messages", resource: resource %>
 
@@ -12,15 +12,15 @@
       <%= f.file_field :profile_image %>
     </div>
       <div class="row pt-5 pb-4">
-        <div class="col-4 text-center" style="font-weight: bold; font-size: 25px;"><%= f.label :お名前 %></div>
+        <div class="col-4" style="text-align: center; font-weight: bold; font-size: 25px;"><%= f.label :お名前 %></div>
         <div class="col-7" style="font-size: 25px;"><%= f.text_field :name, :size => "50" %></div>
       </div>
       <div class="row pb-4">
-        <div class="col-4 text-center" style="font-weight: bold; font-size: 25px;"><%= f.label :メールアドレス %></div>
+        <div class="col-4" style="text-align: center; font-weight: bold; font-size: 25px;"><%= f.label :メールアドレス %></div>
         <div class="col-7" style="font-size: 25px;"><%= f.email_field :email, :size => "50" %></div>
       </div>
       <div class="row" style="padding-bottom: 60px;">
-        <div class="col-4 text-center" style="font-weight: bold; font-size: 25px;"><%= f.label :電話番号 %></div>
+        <div class="col-4" style="text-align: center; font-weight: bold; font-size: 25px;"><%= f.label :電話番号 %></div>
         <div class="col-7" style="font-size: 25px;"><%= f.text_field :phone_number, :size => "50" %></div>
       </div>
       <div class="row justify-content-center" style="padding-bottom: 100px;">
