ランキング論理削除の物件表示訂正、お問い合わせの日時検索機能訂正

--- a/app/views/admins/researches/_researches.html.erb
+++ b/app/views/admins/researches/_researches.html.erb
@@ -1,9 +1,10 @@
 <div style="text-align: center; padding: 130px 0 50px 0; font-size: 20px; font-weight: bold;">
   <%= form_with(scope: :search, url: admins_researches_path, method: :get, local: true) do |f| %>
-    <%= f.label :名前 %>
+    <%= f.label :会員名 %>
     <%= f.text_field :name, value: search_params[:name] %>
     <%= f.date_field :created_at_from, value: search_params[:created_at_from] %> ~
     <%= f.date_field :created_at_to, value: search_params[:created_at_to] %>
+
     <%= f.submit "検索", class: "searches" %>
   <% end %>
 </div>
@@ -27,6 +28,7 @@
             <th>対応状況</th>
           </tr>
           <% researches.each do |research| %>
+            <%#= byebug %>
             <tr>
               <td class="name" style="width: 400px;">
                 <%= link_to admins_research_path(research) do %>
