--- a/app/views/customers/customers/show.html.erb
+++ b/app/views/customers/customers/show.html.erb
@@ -31,7 +31,7 @@
     </div>
   </div>
   <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-    <%= render "customers/favorites/index", favorites: @favorites %>
+    <%= render "customers/favorites/index", favorites: @favorites, estate: @estate %>
   </div>
   <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
     <%= render "customers/researches/index", researches: @researches %>
